@startuml

title __VEHICLES's Class Diagram__\n

  namespace  {
    class CarTransporter {
        ~ nrDoors : int
        + CarTransporter()
    }
  }
  

  namespace  {
    class Ferry {
        + Ferry()
    }
  }
  

  namespace  {
    class Saab95 {
        + Saab95()
        + setTurboOff()
        + setTurboOn()
        # decrementSpeed()
        # incrementSpeed()
    }
  }
  

  namespace  {
    class Scania {
        + Scania()
    }
  }
  

  namespace  {
    class VehicleFactory {
        {static} + createSaab()
        {static} + createScania()
        {static} + createVolvo()
    }
  }
  

  namespace  {
    class Volvo240 {
        + Volvo240()
        + Volvo240()
        # decrementSpeed()
        # incrementSpeed()
    }
  }
  

  CarTransporter -up-|> CargoTransporter
  Ferry -up-|> CargoTransporter
  Saab95 .up.|> ITurbo
  Saab95 -up-|> PersonCar
  Scania -up-|> Truck
  Volvo240 -up-|> PersonCar


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
